--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   margin-top: 181px;
   margin-bottom: 181px;
   margin-left: 200px;
-  margin-right: 200px;
+  margin-right: 100px;
   display: grid;
   /* border: solid black; */
   grid-template-columns: 400px 700px;
@@ -90,4 +90,22 @@ button:hover {
 
 .btn-four {
   width: 140px;
+}
+
+img {
+  width: 100px;
+}
+
+.uploadPhotoImg {
+  margin-left: 375px;
+  margin-top: -90px;  
+}
+
+.dogImg {
+  width: 400px;
+}
+
+.photoLabel {
+  margin-left: 500px;
+  margin-top: -60px;
 }
